tests/rpm-pkgs/libxmlb-0.3.2-2.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING:
libxmlb-0.3.2/redhat-linux-build/tmp-introspect0t4yqrrr/Xmlb-2.0.c:251:7: warning[-W#pragma-messages]: Not available before 2.70
#  if (G_TYPE_IS_FINAL (type))
#      ^
/usr/include/glib-2.0/gobject/gtype.h:388:97: note: expanded from macro 'G_TYPE_IS_FINAL'
##define G_TYPE_IS_FINAL(type)                   (g_type_test_flags ((type), G_TYPE_FLAG_FINAL)) GLIB_AVAILABLE_MACRO_IN_2_70
#                                                                                                ^
/usr/include/glib-2.0/glib/gversionmacros.h:1112:49: note: expanded from macro 'GLIB_AVAILABLE_MACRO_IN_2_70'
## define GLIB_AVAILABLE_MACRO_IN_2_70           GLIB_UNAVAILABLE_MACRO(2, 70)
#                                                ^
/usr/include/glib-2.0/glib/gmacros.h:1157:3: note: expanded from macro 'GLIB_UNAVAILABLE_MACRO'
#  _GLIB_GNUC_DO_PRAGMA(GCC warning G_STRINGIFY (Not available before maj.min))
#  ^
/usr/include/glib-2.0/glib/gmacros.h:1152:33: note: expanded from macro '_GLIB_GNUC_DO_PRAGMA'
##define _GLIB_GNUC_DO_PRAGMA(x) _Pragma(G_STRINGIFY (x))
#                                ^
<scratch space>:9:6: note: expanded from here
# GCC warning "Not available before 2.70"
#     ^

Error: COMPILER_WARNING:
libxmlb-0.3.2/redhat-linux-build/tmp-introspect0t4yqrrr/Xmlb-2.0.c:369:7: warning[-W#pragma-messages]: Not available before 2.70
#  if (G_TYPE_IS_FINAL (type))
#      ^
/usr/include/glib-2.0/gobject/gtype.h:388:97: note: expanded from macro 'G_TYPE_IS_FINAL'
##define G_TYPE_IS_FINAL(type)                   (g_type_test_flags ((type), G_TYPE_FLAG_FINAL)) GLIB_AVAILABLE_MACRO_IN_2_70
#                                                                                                ^
/usr/include/glib-2.0/glib/gversionmacros.h:1112:49: note: expanded from macro 'GLIB_AVAILABLE_MACRO_IN_2_70'
## define GLIB_AVAILABLE_MACRO_IN_2_70           GLIB_UNAVAILABLE_MACRO(2, 70)
#                                                ^
/usr/include/glib-2.0/glib/gmacros.h:1157:3: note: expanded from macro 'GLIB_UNAVAILABLE_MACRO'
#  _GLIB_GNUC_DO_PRAGMA(GCC warning G_STRINGIFY (Not available before maj.min))
#  ^
/usr/include/glib-2.0/glib/gmacros.h:1152:33: note: expanded from macro '_GLIB_GNUC_DO_PRAGMA'
##define _GLIB_GNUC_DO_PRAGMA(x) _Pragma(G_STRINGIFY (x))
#                                ^
<scratch space>:13:6: note: expanded from here
# GCC warning "Not available before 2.70"
#     ^
